# vibe-3

./: .gitignore
.github/workflows/: deploy-frontend-pages.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  chatbot.py  excel.py  health.py  news.py  schedules.py  team_members.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  sqlite.py
backend/app/services/: news_collector.py  news_scheduler.py
backend/tests/: test_api.py
docs/: Architecture.md  Operation.md  PRD.md  index.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/features/admin/: AdminPage.tsx
frontend/src/features/chatbot/: ChatbotPage.tsx
frontend/src/features/excel/: ExcelPage.tsx
frontend/src/features/news/: NewsPage.tsx
frontend/src/features/schedule/: SchedulePage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: global.css
frontend/src/types/: api.ts
scripts/: start_backend_tunnel.ps1  stop_backend_tunnel.ps1
